add folders and correct links

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0%;
-    background-image: url(demon.jpg);
+    background-image: url('../pic/demon.jpg');
     background-size: cover;
     background-attachment: fixed;
     color: #fff;
